2003-06-09  Alasdair Allan <aa@astro.ex.ac.uk>

        * Fixed test scripts for Astro::Catalog::SuperCOSMOS so that
          they fail gracefully if Astro::Aladin isn't installed.
          
        * Astro::Catalog module patched to take an ARK catalogue via
          a scalar rather than from a file. For backwards compatibility
          reasons Astro::Catalog( Cluster => $file ) still refers to
          a serialised version, whereas Astro::Catalog( Scalar => $file ) 
          refers to a scalar holding a string that is an ARK Cluster
          catalogue. This isn't optimal but I don't particularly want
          to break the exisiting (extensive) codebase.

2003-02-24  Alasdair Allan <aa@astro.ex.ac.uk>

        * Astro::Catalog now wraps SuperCOSMOS catalogue using 
          the Astro::Aladin module. Some example scripts using this
          new module and the Astro::DSS module are included in the
          distribution. NB: This isn't intended to be used seriously
          by anyone, its not even a sub-optimal way of going about
          things, but I was playing and since I wrote the code I may
          as well distribute the stuff.
          
2002-05-31  Alasdair Allan <aa@astro.ex.ac.uk>

        * Removed references to Math::libm from the GSC modules, these
          references seemed to have been missed by the previous patch.
          
2002-05-29  Alasdair Allan <aa@astro.ex.ac.uk>

        * Applied patch provided by Stephen Quiney <S.J.Quinney@durham.ac.uk>,
          removes dependancy on Math::libm and fixes test script problem
          which required the $ESTAR_DATA environment variable to be set.

2002-03-30  Alasdair Allan <aa@astro.ex.ac.uk>

        * Minor bug fix?

2002-03-29  Alasdair Allan <aa@astro.ex.ac.uk>
        
        * Added a freeze() function so that the the Catalog object can be
          stored persistently using the Data::Dumper module
          
2002-01-24  Alasdair Allan <aa@astro.ex.ac.uk>
